<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/transparent_bg" >

    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F2F2F2"
        android:orientation="vertical"
        android:padding="10dip" >

        <Button
            android:id="@+id/pop_avator_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:text="@string/album2" />

        <Button
            android:id="@+id/pop_avator_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:text="@string/camera" />

        <Button
            android:id="@+id/pop_avator_cancle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:text="@string/cancle" />
    </LinearLayout>

</RelativeLayout>