<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottombar_group"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:background="@drawable/tab_bottom_bg"
    android:gravity="center"
    android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/bottombar_content1"
        style="@style/bottombar"
        android:drawableTop="@drawable/tab_index_selector"
        android:paddingBottom="4dip"
        android:paddingTop="6dip"
        android:text="@string/app_name"
        android:textColor="@color/gray_text" />

    <RadioButton
        android:id="@+id/bottombar_content2"
        style="@style/bottombar"
        android:drawableTop="@drawable/tab_session_selector"
        android:paddingBottom="4dip"
        android:paddingTop="6dip"
        android:text="@string/session"
        android:textColor="@color/gray_text" />

    <RadioButton
        android:id="@+id/bottombar_content3"
        style="@style/bottombar"
        android:drawableTop="@drawable/tab_contacts_selector"
        android:paddingBottom="4dip"
        android:paddingTop="6dip"
        android:text="@string/contacts"
        android:textColor="@color/gray_text" />

    <RadioButton
        android:id="@+id/bottombar_content4"
        style="@style/bottombar"
        android:drawableTop="@drawable/tab_more_selector"
        android:paddingBottom="4dip"
        android:paddingTop="6dip"
        android:text="@string/more"
        android:textColor="@color/gray_text" />

</RadioGroup>