<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/guide_bottom"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/guide_login"
            android:layout_width="140dip"
            android:layout_height="40dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dip"
            android:background="@drawable/login_box_selector"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/guide_regist"
            android:layout_width="140dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dip"
            android:background="@drawable/regist_box_selector"
            android:text="@string/regist"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/guide_bottom" >

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10.0dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:contentDescription="@string/description"
                android:padding="15.0dip"
                android:src="@drawable/dot" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:contentDescription="@string/description"
                android:padding="15.0dip"
                android:src="@drawable/dot" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:contentDescription="@string/description"
                android:padding="15.0dip"
                android:src="@drawable/dot" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:contentDescription="@string/description"
                android:padding="15.0dip"
                android:src="@drawable/dot" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>